--- a/.github/workflows/main_scheduler82-api.yml
+++ b/.github/workflows/main_scheduler82-api.yml
@@ -28,6 +28,9 @@ jobs:
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
+      - name: remove appsettings.Development.json
+        run: rm ./publish/appsettings.Development.json
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
