global exception handling middleware, appsettings cleanup

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -8,62 +8,10 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=tcp:scheduler82.database.windows.net,1433;Initial Catalog=database;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=\"Active Directory Default\";"
   },
-  "Jwt": {
-    "Issuer": "AspWebTestApi",
-    "Audience": "ApiConsumers"
-  },
-  "Api" : {
-    "BaseUrl" : "http://localhost:5140/",
-    "Endpoints" : {
-      "Employee": {
-        "GetEmployees" : "api/Employee",
-        "GetActiveEmployees" : "api/Employee/Active",
-        "GetAssignedEmployees" : "api/Employee/Assigned",
-        "GetEmployee" : "api/Employee/",
-        "PostEmployee" : "api/Employee",
-        "PutEmployee" : "api/Employee/",
-        "DeleteEmployee" : "api/Employee/"
-      },
-      "Schedule": {
-        "GetSchedules" : "api/Schedule",
-        "GetSchedule" : "api/Schedule/",
-        "GetLatestSchedule" : "api/Schedule/Latest",
-        "RunScheduler" : "api/Schedule/Auto/",
-        "GetScheduleData" : "api/Schedule/Data/",
-        "GetScheduleReport" : "api/Schedule/Report/",
-        "PostSchedule" : "api/Schedule"
-      },
-      "ShiftException": {
-        "GetExceptions" : "api/ShiftException",
-        "GetEmployeeExceptions" : "api/ShiftException/",
-        "GetScheduleExceptions" : "api/ShiftException/",
-        "GetException" : "api/ShiftException/",
-        "PostException" : "api/ShiftException",
-        "DeleteException" : "api/ShiftException/"
-      }
-    }
-  },
-  "ScheduleEngine": {
-    "MaxSd" : 1.33,
-    "Weights" : {
-      "Exhaustion" : 0.5,
-      "DifficultExhaustion" : 0.25,
-      "Constraints" : 0.75,
-      "OffPreferences" : 0.35,
-      "OnPreferences" : 0.25,
-      "DoubleShifts" : 0.5,
-      "Complete" : 1
-    }
-  },
-  "WebApp": {
-    "BaseUrl": "http://192.168.68.116:5172",
-    "BaseUrlHttps": "https://192.168.68.116:7089"
-  },
   "Twilio": {
     "BaseUrl": "https://studio.twilio.com/v2/",
     "Account": {
-      "ServiceSid": "MGf173be6ce5ccb7287cd4aa7e953d7bf6",
-      "PhoneNumber": "+12518424050"
+      "ServiceSid": "MGf173be6ce5ccb7287cd4aa7e953d7bf6"
     },
     "Flows": {
       "Test": "FWc7cbd96a31d4aacf8c307d5a4fb41b6d",
@@ -71,37 +19,6 @@
       "ManagerApprove": "FW48c6c88f99ba090b792099569026e7fb",
       "PublishShifts": "FWe9eb22df4d5c4d28326931c17ad9f1f7",
       "CallToRegister": "FW18ab97bb0c63430cc545db0e787e364a"
-    }
-  },
-  "Params":{
-    "Schedule": {
-      "Dur": {
-        "Min": 1,
-        "Max": 31,
-        "Default": 7
-      }
-    },
-    "Shift": {
-      "Dur": {
-        "Min": 1,
-        "Max": 24,
-        "Default": 12
-      },
-      "DisplayDate": {
-        "MorningOffset": 5
-      }
-    },
-    "Processes": {
-      "AutoSchedule": {
-        "FileWindowDurHrs": 0.1,
-        "HeadsUpDurHrs": 111.0
-      }
-    },
-    "Workflows": {
-      "AutoScheduleScanner": {
-        "CatchRangeHrs": 168.0,
-        "CycleDurMts": 1.0
-      }
     }
   },
   "KeyVault": {
