fixed scanner with processFactory.

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -32,5 +32,19 @@
         "AccountAuthToken": "twilio-live-account-auth-token"
       }
     }
+  },
+  "Params": {
+    "Processes": {
+      "AutoSchedule": {
+        "FileWindowDurHrs": 0.15,
+        "HeadsUpDurHrs": 7.5
+      }
+    },
+    "Workflows": {
+      "AutoScheduleScanner": {
+        "CatchRangeHrs": 8.0,
+        "CycleDurMts": 2.0
+      }
+    }
   }
 }
