--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,8 @@
   "AllowedHosts": "*",
   "Jwt": {
     "Issuer": "AspWebTestApi",
-    "Audience": "ApiConsumers"
+    "Audience": "ApiConsumers",
+    "ExpiresHrs": 168.0
   },
   "ScheduleEngine": {
     "MaxSd" : 1.33,
