--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -16,6 +16,7 @@
     "Flows": {
       "Test": "FWc7cbd96a31d4aacf8c307d5a4fb41b6d",
       "CallToFile": "FW0552d230db01a0c54dbefe264747b30e",
+      "AcknowledgeFile": "FW6d92a2b781ecf66e0cd493623d5ed922",
       "ManagerApprove": "FW48c6c88f99ba090b792099569026e7fb",
       "PublishShifts": "FWe9eb22df4d5c4d28326931c17ad9f1f7",
       "CallToRegister": "FW18ab97bb0c63430cc545db0e787e364a"
