technical commit (added data structures tree folder to solution tree)

--- a/SchedulerApi.csproj
+++ b/SchedulerApi.csproj
@@ -22,4 +22,8 @@
         <PackageReference Include="Twilio.AspNet.Mvc" Version="8.0.2" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Models\DTOs\DataStructures\Tree\" />
+    </ItemGroup>
+
 </Project>
