GPT Version: New Controller and Services

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -16,11 +16,15 @@
     "Flows": {
       "Test": "FWc7cbd96a31d4aacf8c307d5a4fb41b6d",
       "CallToFile": "FW0552d230db01a0c54dbefe264747b30e",
+      "CallToFileGpt": "FW19e5f3efc163e483a1bc69051462e228",
       "AcknowledgeFile": "FW6d92a2b781ecf66e0cd493623d5ed922",
       "ManagerApprove": "FW48c6c88f99ba090b792099569026e7fb",
       "PublishShifts": "FWe9eb22df4d5c4d28326931c17ad9f1f7",
       "CallToRegister": "FW18ab97bb0c63430cc545db0e787e364a"
     }
+  },
+  "ChatGPT": {
+    "AssistantId": "asst_yNmQc7wjjcyJkNPLfqPIwVqb"
   },
   "KeyVault": {
     "Url": "https://scheduler82-keyvault.vault.azure.net/",
@@ -31,14 +35,17 @@
       "Twilio": {
         "AccountSid": "twilio-live-account-sid",
         "AccountAuthToken": "twilio-live-account-auth-token"
+      },      
+      "ChatGPT": {
+        "ApiKey": "openai-secret-key-test"
       }
     }
   },
   "Params": {
     "Processes": {
       "AutoSchedule": {
-        "FileWindowDurHrs": 0.15,
-        "HeadsUpDurHrs": 3.5
+        "FileWindowDurHrs": 24.0,
+        "HeadsUpDurHrs": 60.0
       }
     },
     "Workflows": {
