--- a/SchedulerApi.csproj
+++ b/SchedulerApi.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.6.0" />
+        <PackageReference Include="Betalgo.OpenAI" Version="8.2.2" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.3" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.3" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.3" />
