Publish With Media Version: Infrastructure

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -20,7 +20,8 @@
       "AcknowledgeFile": "FW6d92a2b781ecf66e0cd493623d5ed922",
       "ManagerApprove": "FW48c6c88f99ba090b792099569026e7fb",
       "PublishShifts": "FWe9eb22df4d5c4d28326931c17ad9f1f7",
-      "CallToRegister": "FW18ab97bb0c63430cc545db0e787e364a"
+      "CallToRegister": "FW18ab97bb0c63430cc545db0e787e364a",
+      "PublishShiftsMedia": "FWffa9ac8917eddbdc7d1cce929d0a8f48"
     }
   },
   "ChatGPT": {
@@ -54,5 +55,8 @@
         "CycleDurMts": 2.0
       }
     }
+  },
+  "AzureBlobStorage": {
+    "BlobContainerName": "scheduler-images"
   }
 }
