--- a/SchedulerApi.csproj
+++ b/SchedulerApi.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.6.0" />
+        <PackageReference Include="Azure.Storage.Blobs" Version="12.20.0" />
         <PackageReference Include="Betalgo.OpenAI" Version="8.2.2" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.3" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.3" />
@@ -18,6 +19,7 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="PuppeteerSharp" Version="18.0.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
         <PackageReference Include="Twilio" Version="7.0.2" />
         <PackageReference Include="Twilio.AspNet.Mvc" Version="8.0.2" />
