--- a/SchedulerApi.csproj
+++ b/SchedulerApi.csproj
@@ -10,6 +10,9 @@
         <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.6.0" />
         <PackageReference Include="Azure.Storage.Blobs" Version="12.20.0" />
         <PackageReference Include="Betalgo.OpenAI" Version="8.2.2" />
+        <PackageReference Include="Hangfire.AspNetCore" Version="1.8.12" />
+        <PackageReference Include="Hangfire.Core" Version="1.8.12" />
+        <PackageReference Include="Hangfire.SqlServer" Version="1.8.12" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.3" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.3" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.3" />
