Jobs Version: Removing traces of Scanners

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -50,7 +50,7 @@
       }
     },
     "Workflows": {
-      "AutoScheduleScanner": {
+      "AutoScheduleJob": {
         "CatchRangeHrs": 184.5,
         "CycleDurMts": 2.0
       }
