--- a/appsettings.json
+++ b/appsettings.json
@@ -48,7 +48,7 @@
       }
     },
     "Workflows": {
-      "AutoScheduleScanner": {
+      "AutoScheduleJob": {
         "CatchRangeHrs": 136.0,
         "CycleDurMts": 30.0
       }
