Schedule Image Generation: Replaced PuppeteerSharp with ApiFlash for environment independancy.

--- a/SchedulerApi.csproj
+++ b/SchedulerApi.csproj
@@ -32,4 +32,8 @@
       <Folder Include="Models\DTOs\DataStructures\Tree\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Compile Remove="Services\ImageGenerationServices\ScheduleHtmlServices\NewTmp.cs" />
+    </ItemGroup>
+
 </Project>
